<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="write_us">Напишите нам</string>
    <string name="go_to_organization_site">Перейти на сайт организации</string>
    <string name="help_with_money">Помочь\nденьгами</string>
    <string name="professional_help">Проф.\nпомощь</string>
    <string name="become_volunteer">Стать\nволонтером</string>
    <string name="help_with_clothes">Помочь\nвещами</string>
    <string name="have_questions">У вас есть вопросы?</string>
    <plurals name="event_date">
        <item quantity="zero">Сегодня последний день!</item>
        <item quantity="one">Остался %s день (%s - %s)</item>
        <item quantity="few">Осталось %s дня (%s - %s)</item>
        <item quantity="many">Осталось %s дней (%s - %s)</item>
    </plurals>
    <string name="event_is_over">Мероприятие прошло (%s - %s)</string>
    <string name="thanks_for_desicion_to_help">Спасибо за решение помочь!</string>
    <string name="choose_money_amount">Выберите размер пожертвования</string>
    <string name="share">Поделиться</string>
    <string name="or_enter_your_value">или введите нужную сумму</string>
    <string name="transfer">Перевести</string>
    <string name="cancel">Отмена</string>
    <string name="input_the_amount">Введите сумму</string>
    <string name="donation_notification_id">Пожертвования</string>
    <string name="thanks_for_donation_of">Спасибо, что пожертвовали %s! Будем признательны, если вы сможете пожертвовать ещё больше.</string>
    <string name="remind_later">Напомнить позже</string>
    <string name="remind_you_we_will_be_pleasure">Напоминаем, что мы будем очень признательны, если вы сможете пожертвовать ещё больше.</string>
</resources>