<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/event_details"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextAppearance="@style/FadingEllipsizeTextAppearance"
            app:titleTextColor="@color/white"
            tools:title="Спонсоры отремонтируют школу-интернат" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/eventTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_m"
                android:fontFamily="@font/officina_sans_scc_extrabold"
                android:textColor="@color/blue_grey"
                android:textSize="21sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Спонсоры отремонтируют школу-интернат" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/eventDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_m"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/grey"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:drawableTint="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/eventTitleTextView"
                tools:text="Осталось 13 дней (21.09 – 20.10)" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sponsorTextView"
                style="@style/TextStyle9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_xs"
                app:layout_constraintTop_toBottomOf="@id/eventDateTextView"
                tools:text="Благотворительный Фонд «Счастливый Мир»" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/sponsorTextView">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_nav" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/spacing_xxs"
                    android:layout_marginEnd="@dimen/spacing_l"
                    android:autoLink="map"
                    android:includeFontPadding="false"
                    android:textColor="@color/black_70"
                    android:textIsSelectable="true"
                    app:lineHeight="20sp"
                    tools:text="Санкт-Петербург, Кирочная улица, д. 50А, каб. 208" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_phone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phonesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/spacing_xxs"
                    android:layout_marginEnd="@dimen/spacing_l"
                    android:includeFontPadding="false"
                    android:textColor="@color/black_70"
                    app:lineHeight="20sp"
                    tools:text="+7 (937) 037 37-73\n+7 (937) 016 16-16" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_l"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_mail" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/spacing_xxs"
                    android:layout_marginEnd="@dimen/spacing_l"
                    android:includeFontPadding="false"
                    android:textColor="@color/black_70"
                    app:lineHeight="20sp"
                    tools:text="@string/have_questions" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/firstEventImage"
                android:layout_width="0dp"
                android:layout_height="158dp"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_l"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@id/secondEventImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear3"
                app:srcCompat="@drawable/img_event" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/secondEventImage"
                android:layout_width="0dp"
                android:layout_height="74dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="@dimen/spacing_l"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/thirdEventImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/firstEventImage"
                app:layout_constraintTop_toTopOf="@id/firstEventImage"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:srcCompat="@drawable/img_event" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/thirdEventImage"
                android:layout_width="0dp"
                android:layout_height="74dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/firstEventImage"
                app:layout_constraintEnd_toEndOf="@id/secondEventImage"
                app:layout_constraintStart_toStartOf="@id/secondEventImage"
                app:layout_constraintTop_toBottomOf="@id/secondEventImage"
                app:srcCompat="@drawable/img_event_2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_l"
                android:textColor="@color/black_70"
                app:layout_constraintTop_toBottomOf="@id/firstEventImage"
                app:lineHeight="20sp"
                tools:text="Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом финансово поучаствовать в помощи детям.\n\nПри этом финансово поучаствовать в помощи детям. При этом финансово поучаствовать в помощи детям." />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/siteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_l"
                android:autoLink="web"
                android:text="@string/go_to_organization_site"
                android:textColor="@color/leaf"
                android:textColorLink="@color/leaf"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

            <include
                android:id="@+id/eventDetailsFooterLayout"
                layout="@layout/event_details_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:layout_marginBottom="71dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/siteTextView" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="#d8d8d8"
                app:layout_constraintTop_toBottomOf="@id/eventDetailsFooterLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        app:contentInsetStart="0dp"
        app:elevation="0dp"
        app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                android:text="@string/help_with_clothes"
                app:drawableTopCompat="@drawable/ic_shirt" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:foreground="@drawable/gradient_separator"
                app:dividerColor="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                android:text="@string/become_volunteer"
                app:drawableTopCompat="@drawable/ic_hands" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:foreground="@drawable/gradient_separator"
                app:dividerColor="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                android:text="@string/professional_help"
                app:drawableTopCompat="@drawable/ic_tools" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:foreground="@drawable/gradient_separator"
                app:dividerColor="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/donationTextView"
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                android:text="@string/help_with_money"
                app:drawableTopCompat="@drawable/ic_coins" />
        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>